--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>No Framework Website</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+  <title>Beanify :: Thinkin' about them beans, 𝒻𝑜𝓇 𝓎𝑜𝓊.</title>
 <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 <body>
-  <div class="wrapper">
-    <header>
-      <h1>No Framework Website</h1>
-    </header>
-    <main>
-      <h2>This site rocks 🤘🤘</h2>
-      <div class="bacon">
-        <img src="./assets/images/oval.svg" alt="loading">
-      </div>
-    </main>
-    <footer>
-      <p>Made with ❤️ by <a href="https://twitter.com/_esausilva" target="_blank">Esau Silva</a></p>
-    </footer>
+  <img src="./assets/images/beanify.svg" />
+  <div class="ratio">
+    <video id="player" autoplay></video>
+  </div>
+  <button id="beam">Enable camera for bean beaming!</button>
+  <div class="ratio">
+    <canvas id="canvas"></canvas>
   </div>
   <script src="./assets/scripts/bundle.js"></script>
 </body>
