--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <!-- Load the coco-ssd model. -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+
+  <script src="https://unpkg.com/opencv.js"></script>
   <title>Beanify :: Thinkin' about them beans, 𝒻𝑜𝓇 𝓎𝑜𝓊.</title>
 <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
