--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
     </div>
     <div class="ratio">
       <canvas width="400" height="400" id="preview"></canvas>
-    </div>
-    <button id="beam">Enable camera for bean beaming!</button>
-    <div class="ratio">
-      <canvas width="100" height="100" id="canvas"></canvas>
       <div class="overlay">
         <div id="result"></div>
       </div>
+    </div>
+    <button id="beam">Enable camera for bean beaming!</button>
+    <div class="hide">
+      <canvas width="100" height="100" id="canvas"></canvas>
     </div>
   </main>
   <script src="./assets/scripts/bundle.js"></script>
